bk_ida/gobmkida/g3/set_depth_values
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/set_depth_values/src/engine/utils.c:1173:13: error: use of undeclared identifier 'node_limits_0'
v8 = 1000 * node_limits_0[10 - level] / 500; 
            ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/set_depth_values/src/obj/1/utils.o] Error 1
